--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -35,7 +35,7 @@ One could argue that some languages may be considered dormant even if there are 
 
 Such cases are extreme, and there will be exceptions to almost any of these categories. Even for living languages, questions of identification can be difficult. For instance, \cite{gilRiau} points to at least a dozen different interpretations of what Riau Indonesian might technically be. Defining language is beyond the scope of this thesis - however, I would be amiss not to mention this problem here.
 
-\subsubsection{Official, de facto, de jure, majority, and minority languages}
+\subsubsection{Official, \textit{de facto}, \textit{de jure}, majority, and minority languages}
 
 All of the former definitions were seen through the lens of language communities and vitality. However, there are other lenses through which languages as a whole can be viewed - for instance, politically and computationally.
 
