--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -42,7 +42,7 @@ All of the former definitions were seen through the lens of language communities
 Political definitions of language include \textit{official} and \textit{working} languages. Official languages are languages which are given a definitive status by a state, normally on the national level. On the supranational level (such as is the case with the EU or the ICC), they are generally termed working languages (which is different, in turn, from a \textit{lingua franca}, which is a trade, bridge or link language used informally between groups who speak different languages themselves). These languages can be broken down into {\it de facto} an {\it de jure} languages - the latter are given legal status in the law, while the former do not have official legal status but are considered culturally and for most intents and purposes as the legal language. An example would be in the United States, where there is no {\it de jure} legal language, but the {\it de facto} language is English. This means that most resources are provided in English, and other languages are often ignored or not allocated resources by the law.
 
 \begin{quote}
-These terms, as defined by \citet{johnson2013language}, distinguish policies from one another by virtue of their alignment between law and practice, respectively. Here, {\it de jure} policies are those disseminated in legal proclamations, typically being “officially documented in writing” (p. 10). By contrast, {\it de facto} policy describes those policies that exist in {\it practice} [sic], crucially, without legal provenance or even {\it in spite} of existing \textit{de jure} polices. \citep{hanks2017policy}
+These terms, as defined by \citet{johnson2013language}, distinguish policies from one another by virtue of their alignment between law and practice, respectively. Here, {\it de jure} policies are those disseminated in legal proclamations, typically being 'officially documented in writing' (p. 10). By contrast, {\it de facto} policy describes those policies that exist in {\it practice} [sic], crucially, without legal provenance or even {\it in spite} of existing \textit{de jure} polices. \citep{hanks2017policy}
 \end{quote}
 
 An example given by \citet{hanks2017policy} is the case of boarding schools in the United States and Canada for indigenous children, often forcibly removed from their home, where the {\it de jure} goal was to provide the children with a working knowledge of English, but the {\it de facto} result was that they were heavily discouraged (often through direct physical abuse to students who spoke in their language) from speaking their native tongues in the classroom or in the schools, with the result that many languages were directly endangered or lost. This has happened in many places, as well: for instance, Gaelic was forbidden in the classroom by English teachers, and children were beaten (for instance, slapped across the knuckles with a ruler) for using Gaelic.
