Finished 2.2 defining low resource languages

--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,69 @@
   publisher={Springer}
 }
 
+@inproceedings{lewis2010haitian,
+  title={Haitian Creole: How to Build and Ship an MT Engine from Scratch in 4 days, 17 hours, \& 30 minutes},
+  author={Lewis, Will},
+  booktitle={14th Annual conference of the European Association for machine translation},
+  year={2010},
+  organization={Citeseer}
+}
+
+@inproceedings{lewis2011crisis,
+  title={Crisis mt: Developing a cookbook for mt in crisis situations},
+  author={Lewis, William D and Munro, Robert and Vogel, Stephan},
+  booktitle={Proceedings of the Sixth Workshop on Statistical Machine Translation},
+  pages={501--511},
+  year={2011},
+  organization={Association for Computational Linguistics}
+}
+
+
+@inproceedings{agic2015if,
+  title={If all you have is a bit of the Bible: Learning POS taggers for truly low-resource languages},
+  author={Agi{\'c}, {\v{Z}}eljko and Hovy, Dirk and S{\o}gaard, Anders},
+  booktitle={The 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference of the Asian Federation of Natural Language Processing (ACL-IJCNLP 2015)},
+  year={2015}
+}
+
+@inproceedings{callison2011findings,
+  title={Findings of the 2011 workshop on statistical machine translation},
+  author={Callison-Burch, Chris and Koehn, Philipp and Monz, Christof and Zaidan, Omar F},
+  booktitle={Proceedings of the Sixth Workshop on Statistical Machine Translation},
+  pages={22--64},
+  year={2011},
+  organization={Association for Computational Linguistics}
+}
+
+
+@article{oard2003surprise,
+  title={The surprise language exercises},
+  author={Oard, Douglas W},
+  journal={ACM Transactions on Asian Language Information Processing (TALIP)},
+  volume={2},
+  number={2},
+  pages={79--84},
+  year={2003},
+  publisher={ACM}
+}
+
+
+@misc{boersma2009praat,
+  title={Praat: doing phonetics by computer [Computer program]},
+  author={Boersma, Paul and Weenink, David},
+  year={2018}
+}
+
+
+@inproceedings{chew2006evaluation,
+  title={Evaluation of the bible as a resource for cross-language information retrieval},
+  author={Chew, Peter A and Verzi, Steve J and Bauer, Travis L and McClain, Jonathan T},
+  booktitle={Proceedings of the workshop on multilingual language resources and interoperability},
+  pages={68--74},
+  year={2006},
+  organization={Association for Computational Linguistics}
+}
+
 @article{hanks2017policy,
   title={Policy Barriers to Ainu Language Revitalization in Japan: When Globalization Means English},
   author={Hanks, David H},
