--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -54,9 +54,13 @@ Some minority languages have legal status as minority languages. A good example 
 
 \subsection{Low resource, under resourced and incident languages}
 
-Low or under resourced languages, which are spoken by a significant population but underrepresented on the web (for instance, Quechua). These languages share certain characteristics in common; the most pertinent is sparse data and a lack of resources, ranging from spell-checkers to grammars to machine translation corpora. Other under-resourced languages that do not fall under this list include constructed languages (for instance, Klingon or Na'vi), computer languages (for instance, Javascript or Lua), and extinct languages that are so sparse as to be rendered computationally irrelevant for most purposes (for instance, Tocharian).
+\textit{Low resource} languages are languages which have fewer computational resources than any of the bigger languages that dominate global discourse. There is no distinct cut-off for defining a low resource language versus a \textit{high resource}, \textit{resource-rich}, or just a \textit{resourced} language. A \textit{low resource} language can also be indiscriminately called a \textit{under resourced}, \textit{sparsely resourced}, or \textit{sparse} language. The disparity in resolved definitions reflects the focus of research, as generally researchers work with specific languages on computational models, and not on large databases where a precise definition is useful. Qualifiers are often included - for instance, \citet{agic2015if}'s paper, "If all you have is a bit of the Bible: Learning POS taggers for truly low-resource languages." These qualifiers are generally not considered within a rigorous system of rank - for more on that, consider section ~\ref{subsec:metrics} on metrics below.
 
-% - incident and surprise languages
+In the context of low resource languages, the majority of established work revolves around adapting existing systems from high resourced languages to low resource languages. In such a case, the \textit{source} language is where the original system was originally trained or upon which it was built, while the \textit{target} language is the language upon which the system is being used, tested, or adapted. These terms are largely context dependent. Similarly, \textit{sparse} in particular is more often used to refer to a dataset, but can be used of a language when it is under resourced.
+
+While hypothetically some languages could be defined as having no resources, there is no commonly used term such as 'resourceless'. In general, languages without writing systems fit in this category, and while it would potentially be interesting to train resources on audio-only vocabulary, this is generally not done computationally, but intensively by field linguists using specific tools such as dictionary applications or audio/video applications such as Praat \citep{boersma2009praat}, which allows you to view the waveforms for spoken corpora and annotate it. These resources - annotated (or not) corpora made by field linguists for a language - are, along with word lists and basic dictionaries, often the first resources for a given language, and are often not published but are accessibly only through corresponding with the linguist or team doing the work. A comparison with multimillion dollar projects such as Google Translate makes it clear that these languages would be considered under resourced.
+
+Another couple of terms often used in this general context are \textit{incident} or \textit{surprise} languages. The latter is generally used for challenges, and was first used to describe the US Defense Advanced Research Projects Agency (DARPA) "Surprise Language Challenge", run by their Translingual Information Detection Extraction and Summarization (TIDES) program in 2003. The challengee's goal was to see if a teams working on new languages they hadn't seen before (hence, 'surprise') could develop sufficiently useful resources and machine translation systems within a constrained period of time. \citep{oard2003surprise} These sorts of challenges aren't limited to DARPA; for instance, there was a Workshop on statistical Machine Translation held  at  EMNLP  2011 \citep{callison2011findings}. This workshop focused on a few tasks, one of which was based on the successful efforts by the Microsoft Translation team in 2010 to build a machine translation system for Haitian Creole that used SMS messages, after an earthquake there precipitated the need for a translation system between aid workers and spekaers of Haitian Creole, previously a low resource language \citep{lewis2010haitian, lewis2011crisis}. Haitian Creole, here, would be an \textit{incident} language.
 
 \subsection{Computational languages}
 
@@ -64,6 +68,7 @@ Low or under resourced languages, which are spoken by a significant population b
 % Major languages
 
 \subsection{Metrics}
+\label{subsec:metrics}
 
 There are various metrics would can be used to assess language health. In this section, I'll explain these metrics in detail, focusing on the UNESCO, GIDS, EGIDS, and LEI measurements, as suggested by \citet{yang2017toward}.
 
@@ -82,6 +87,7 @@ There are various metrics would can be used to assess language health. In this s
 \subsection{Digital presence}
 
 
+% A better lower bound might be the existence of a Bible. The Bible is often the first thing translated into a language, and there is a body of research that uses partial or full translations of the Bible for training NLP systems as a result \citep{chew2006evaluation, }.
 
 In this section, I am going to explain what digital presence is. This is more than just defining language endangerment - instead, this is about how do we quantify a language's existence digitally, either on the web or offline in archives.
 
