Adding note from call

--- a/4-open-source-for-end-langs.tex
+++ b/4-open-source-for-end-langs.tex
@@ -43,6 +43,10 @@ Here, I'll explain some open source resources that can be used to bootstrap deve
 %% Mention LoReHLT https://www.nist.gov/itl/iad/mig/lorehlt-evaluations
 %% The tools used here are permissively licenses and publicly available.
 
+\subsection{Data permanence and interoperability}
+
+Here I'll talk about the inextricable nature of linguistics data and code, and how they are linked.
+
 \subsection{A Database for Open Source Code}\label{sec:solutions}
 
 Here, I'll talk about a database of open source code. Specifically, I'll mention my own work building \href{https://github.com/RichardLitt/endangered-languages}{https://github.com/RichardLitt/endangered-languages}, described first in \citet{CCURL}, and what it contains and who has worked on it with me. I'll cover the main tools, what kind of tools were included, and why I built the database on GitHub in this way.
