--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -52,7 +52,7 @@ Within a state, the proportion of population of speakers compared to the entire 
 Some minority languages have legal status as minority languages. A good example would be in Canada, where minority languages in each province are given legal protection - for instance, English in Qu\'ebec, where a majority of the speakers are Francophone, or French in Ontario, where the majority of the speakers are French. Sometimes languages with very small populations - such as indigenous languages spoken by First Nations communities in Canada - are given legal status, too, as is the case with Nunavut, a territory in Canada where two Inuit languages - Inuktitut and Inuinnaqtun - are granted legal status, although they are nationally minority languages, and although one of them, Inuinnaqtun, has less than 300 speakers and comprises only around 1\% of the population of Nunavut. Another example would be Hawai'ian, which is the state language of Hawai'i since 1978, although it only has around 2000 native speakers, and is a minority language in Hawai'i.
 
 
-\subsection{Low resource, under resourced and incident languages}
+\subsubsection{Low resource, under resourced and incident languages}
 
 \textit{Low resource} languages are languages which have fewer computational resources than any of the bigger languages that dominate global discourse. There is no distinct cut-off for defining a low resource language versus a \textit{high resource}, \textit{resource-rich}, or just a \textit{resourced} language. A \textit{low resource} language can also be indiscriminately called a \textit{under resourced}, \textit{sparsely resourced}, or \textit{sparse} language. The disparity in resolved definitions reflects the focus of research, as generally researchers work with specific languages on computational models, and not on large databases where a precise definition is useful. Qualifiers are often included - for instance, \citet{agic2015if}'s paper, "If all you have is a bit of the Bible: Learning POS taggers for truly low-resource languages." These qualifiers are generally not considered within a rigorous system of rank - for more on that, consider section ~\ref{subsec:metrics} on metrics below.
 
@@ -62,7 +62,7 @@ While hypothetically some languages could be defined as having no resources, the
 
 Another couple of terms often used in this general context are \textit{incident} or \textit{surprise} languages. The latter is generally used for challenges, and was first used to describe the US Defense Advanced Research Projects Agency (DARPA) "Surprise Language Challenge", run by their Translingual Information Detection Extraction and Summarization (TIDES) program in 2003. The challengee's goal was to see if a teams working on new languages they hadn't seen before (hence, 'surprise') could develop sufficiently useful resources and machine translation systems within a constrained period of time. \citep{oard2003surprise} These sorts of challenges aren't limited to DARPA; for instance, there was a Workshop on statistical Machine Translation held  at  EMNLP  2011 \citep{callison2011findings}. This workshop focused on a few tasks, one of which was based on the successful efforts by the Microsoft Translation team in 2010 to build a machine translation system for Haitian Creole that used SMS messages, after an earthquake there precipitated the need for a translation system between aid workers and spekaers of Haitian Creole, previously a low resource language \citep{lewis2010haitian, lewis2011crisis}. Haitian Creole, here, would be an \textit{incident} language.
 
-\subsection{Computational languages}
+\subsubsection{Computer languages}
 
 % Chomskyan definition
 % Major languages
