--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -54,7 +54,7 @@ Some minority languages have legal status as minority languages. A good example 
 
 \subsubsection{Low resource, under resourced and incident languages}
 
-\textit{Low resource} languages are languages which have fewer computational resources than any of the bigger languages that dominate global discourse. There is no distinct cut-off for defining a low resource language versus a \textit{high resource}, \textit{resource-rich}, or just a \textit{resourced} language. A \textit{low resource} language can also be indiscriminately called a \textit{under resourced}, \textit{sparsely resourced}, or \textit{sparse} language. The disparity in resolved definitions reflects the focus of research, as generally researchers work with specific languages on computational models, and not on large databases where a precise definition is useful. Qualifiers are often included - for instance, \citet{agic2015if}'s paper, "If all you have is a bit of the Bible: Learning POS taggers for truly low-resource languages." These qualifiers are generally not considered within a rigorous system of rank - for more on that, consider section ~\ref{subsec:metrics} on metrics below.
+\textit{Low resource} languages are languages which have fewer computational resources than any of the bigger languages that dominate global discourse. There is no distinct cut-off for defining a low resource language versus a \textit{high resource}, \textit{resource-rich}, or just a \textit{resourced} language. A \textit{low resource} language can also be indiscriminately called a \textit{under resourced}, \textit{sparsely resourced}, or \textit{sparse} language. The disparity in resolved definitions reflects the focus of research, as generally researchers work with specific languages on computational models, and not on large databases where a precise definition is useful. Qualifiers are often included - for instance, \citet{agic2015if}'s paper, "If all you have is a bit of the Bible: Learning POS taggers for truly low-resource languages." These qualifiers are generally not considered within a rigorous system of rank - for more on that, consider Section~\ref{subsec:metrics} on metrics below.
 
 In the context of low resource languages, the majority of established work revolves around adapting existing systems from high resourced languages to low resource languages. In such a case, the \textit{source} language is where the original system was originally trained or upon which it was built, while the \textit{target} language is the language upon which the system is being used, tested, or adapted. These terms are largely context dependent. Similarly, \textit{sparse} in particular is more often used to refer to a dataset, but can be used of a language when it is under resourced.
 
