Section 2.1.4: Computer languages

--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -64,8 +64,9 @@ Another couple of terms often used in this general context are \textit{incident}
 
 \subsubsection{Computer languages}
 
-% Chomskyan definition
-% Major languages
+A \textit{computer} or \textit{computational} language is a formalised language used to communicate instructions to a machine. There are a large variety of names and variants, and the definition here may be construed as insufficient. For the purposes of this thesis, a computer language is for talking to a machine, and is demonstrably different than a human language, which is generally used for communicating with humans. This definition is important only in so much as it helps clarify that we are talking about human languages when we mean low resource or endangered languages, not computer languages. The relevancy, usage, or status of computer languages is largely irrelevant here, unless it touches on resources used on human languages. For instance, any grammar written in COBOL, a sixty year old language, may be less accessible to open source coders who write primarily in Python or JavaScript, two popular languages used on the web and in the FLOSS ecosystem today. This type of situation will be covered in more depth in Section~\ref{subsec:digital-permanence}.
+
+Other terms used in exploring the theory of language, semiotics, or formal language theory - such as context-free or recursively-enumerable languages - are likewise unimportant to this thesis unless they touch on human and low resource languages directly in some tangible way.
 
 \subsection{Metrics}
 \label{subsec:metrics}
