--- a/3-open-source.tex
+++ b/3-open-source.tex
@@ -63,6 +63,7 @@ The Open Source Institute, which originally coined the term {\it open source}, h
 Here, I will include a short section on how the open source world works. In particular, I'll answer the question of where code lives. I'll include a short overview and case study on GitHub, SourceForge, and some academic archival sites (UPenn, Max Planck, DFKI).
 
 \subsection{Digital Permanence and Storage}
+\label{subsec:digital-permanence}
 
 Universities and institutions have short timelines and are largely dependent on specific, allocated, and thus finite funding. Here, I'll answer the question: What other models are there for data storage? What concerns are there?
 
